feat: Adicionar registro de data e hora ao associar e devolver chaves
- Implementado o registro de data e hora ao associar uma chave a um usuário.
- Adicionada a funcionalidade de registrar a data e hora de devolução da chave.
- Ajustado o serviço de associação de chaves para salvar a data de retirada (data de criação).
- Ajustado o serviço de devolução de chaves para salvar a data de devolução.
- Atualizações refletem corretamente no front-end, exibindo as datas e horários no formato esperado.